rkyv/tests/ui/the_most_unhelpful_error.stderr
error[E0277]: the trait bound `Strategy<NotSerializer, Failure>: MyTrait` is not satisfied
  --> tests/ui/the_most_unhelpful_error.rs:21:26
   |
21 |     let state = archived.deserialize(Strategy::<_, Failure>::wrap(&mut NotSerializer));
   |                          ^^^^^^^^^^^ the trait `MyTrait` is not implemented for `Strategy<NotSerializer, Failure>`
   |
help: the trait `MyTrait` is implemented for `Serializer`
  --> tests/ui/the_most_unhelpful_error.rs:8:1
   |
 8 | impl MyTrait for Serializer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required for `ArchivedMyStruct` to implement `Deserialize<MyStruct, Strategy<NotSerializer, Failure>>`
  --> tests/ui/the_most_unhelpful_error.rs:12:30
   |
12 | #[derive(Archive, Serialize, Deserialize)]
   |                              ^^^^^^^^^^^
13 | #[rkyv(deserialize_bounds(__D: MyTrait))]
   |                                ------- unsatisfied trait bound introduced in this `derive` macro
   = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
